# voxctrl

./: .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  config.json  installer.nsi  list-devices.py  monitor.bat  setup.ps1  transcribe.py  tray_app.py
.cargo/: config.toml
.claude/commands/: release.md
crates/voxctrl/: Cargo.toml
crates/voxctrl-core/src/: audio.rs  config.rs  lib.rs  pipeline.rs  recording.rs  stt_client.rs  stt_server.rs  util.rs
crates/voxctrl-stt/: Cargo.toml
crates/voxctrl/src/: main.rs  (+1 more)
lore/: 20260222-1555-voxmic-rust-crossplatform-design.md  20260222-1700-voxmic-rust-implementation.md  20260222-1800-voxmic-msi-installer.md  20260222-2100-nsis-windows-installer.md  20260222-gui-tui-feature-flags.md  20260222-model-manager-download-consent.md  20260223-2311-harden-whisper-degradation-r2.md  20260223-feat-hotkey-dictation-gate.md  20260223-feat-hotkey-ui-plan.md  20260223-feat-voxtral-local-tests-plan.md  20260223-fix-whisper-degradation-plan.md  20260223-harden-whisper-native.md  20260223-replace-tcp-with-named-pipe.md  20260224-feat-resumable-hf-downloads.md  20260225-fix-voxtral-oom-mmap-safetensors.md  harden-settings-auto-save.md
src/: config.rs  hotkey.rs  main.rs  stt_client.rs  stt_server.rs  tray.rs  tui.rs
src/models/: mod.rs
src/stt/: mod.rs
src/ui/: mod.rs  model_table.rs
voxctrl/: Cargo.toml
voxctrl/src/: hotkey.rs  main.rs  tray.rs
voxmic/: Cargo.toml
voxmic/src/: audio.rs  config.rs  main.rs  tray.rs  typing.rs
voxmic/src/backend/: mod.rs  voxtral.rs
voxmic/wix/: main.wxs
wix/: License.rtf  main.wxs
(+19 files in other folders)
